--- a/python/airi/media/configure.html
+++ b/python/airi/media/configure.html
@@ -81,7 +81,7 @@ $(document).ready(load)
         <div class="label">Reconnect</div>
           <div class="value" id="reconnect"></div>
             <div class="table-reset"></div>
-        <div class="label">Reconnect Timeout</div>
+        <div class="label">Reconnect After</div>
           <div class="value">
             <input type="textbox" name="reconnect_timeout" style="width: 10%" id="reconnect_timeout"/> seconds
           </div>
