--- a/python/airi/media/video.html
+++ b/python/airi/media/video.html
@@ -21,7 +21,7 @@ function changeSize(){
 
 function postload(){
   $("#size >select").change(changeSize);
-  setInterval(updateConfiguration, 1000);
+  setInterval(updateConfiguration, 10000);
 }
 
 function load(){
@@ -83,6 +83,11 @@ $(document).ready(load)
           <div class="table-reset"></div>
       <div class="label">Status</div>
         <div class="value" id="status"></div>
+          <div class="table-reset"></div>
+      <div class="label"></div>
+        <div class="value"></div>
+          <button id="connect">Connect</button>
+          <button id="disconnect">Disconnect</button>
           <div class="table-reset"></div>
       <div class="label">Battery</div>
         <div class="value" id="battery"></div>
